# omni-crypt

./: README.md  requirements.txt  setup.cfg
.github/workflows/: tests.yaml
omnicrypt/: __init__.py  secure.py  test_all.py
