[metadata]
name = omnicrypt
description = "Learn a cryptography for great good"
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
classifiers =
    Programming Language :: Python :: 3.8
version = attr: omnicrypt.__version__

[options]
packages = find:

[options.extras_require]
test = pytest
